# research_streamlit_app5

./: extract_area_number.py  pyproject.toml  requirements.txt
